# TileableShell

./: .gitignore  CMakeLists.txt  LICENSE  README.md
_Model/_Backup/_Model_PengYun/: Pengyun_2.3dm
_Model/_Backup/_Model_Ying/_backup/: arch.off  borrowmean.off  eich.off  snow.off  star.off  torus.off
_TilePattern/_matlab/: 3-4-6-4-4901.xml  3-4-6-4_3423.xml  3^2-4-3-4_5542.xml  3^4-6_11844.xml  3^6_11100.xml  readPattern_hexagon.m  readPattern_quad.m  readPattern_snub_square.m  readPattern_trihexagonal.m  writeOBJ.m
data/Model/_Backup/_Model_PengYun/: Pengyun_1.3dm
data/Model/_Backup/_Model_Ying/_backup/: coin.off  ring.off
data/TilePattern/_matlab/: 3^3-4^2_10086.xml  3^6-6^2_11844.xml  4^4_7200.xml  parseXML.m  readPattern_elongated_triangular.m  readPattern_rhombitrihexagonal_tiling.m  readPattern_triangle.m  readPattern_truncated_square.m
ext/: CMakeLists.txt
ext/OpenMesh/: CMakeLists.txt  README.md
ext/OpenMesh/Doc/: CMakeLists.txt  changelog.docu
ext/OpenMesh/Documentation/: a00002_source.html  a00014_source.html  a00029_source.html  a00041_source.html  a00044_source.html  a00050_source.html  a00068_source.html  a00137_source.html  a00143_source.html  a00146_source.html  a00149_source.html  a00152_source.html  a00155_source.html  a00158_source.html  a00161.html  a00161.js  a00161_source.html  a00162.map  a00162.md5  a00163.map  a00163.md5  a00164_source.html  a00167_source.html  a00170_source.html  a00176_source.html  a00179_source.html  a00182_source.html  a00185_source.html  a00188_source.html  a00191_source.html  a00197_source.html  a00200_source.html  a00203_source.html  a00209_source.html  a00212_source.html  a00215_source.html  a00221_source.html  a00227_source.html  a00233_source.html  a00239_source.html  (+2472 more)
ext/OpenMesh/Documentation/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+118 more)
ext/OpenMesh/cmake/: OpenMeshPackage.cmake
ext/OpenMesh/cmake-library/VCI/: VCICompiler.cmake
ext/OpenMesh/debian/: changelog  control  rules
ext/OpenMesh/src/OpenMesh/Core/IO/: Options.hh  SR_binary_spec.hh
ext/OpenMesh/src/OpenMesh/Core/IO/writer/: OBJWriter.cc  PLYWriter.hh
ext/OpenMesh/src/OpenMesh/Core/System/: config.h
ext/OpenMesh/src/OpenMesh/Tools/VDPM/: VHierarchyWindow.cc
ext/OpenMesh/src/Unittests/: CMakeLists.txt  unittests_tutorials.cc
ext/OpenMesh/src/Unittests/TestFiles/: CubeCol.mtl
ext/ShapeOp.0.1.0/libShapeOp/: CMakeLists.txt
ext/ShapeOp.0.1.0/libShapeOp/bindings/c/: runme.c
ext/ShapeOp.0.1.0/libShapeOp/bindings/c++/: runme.cpp
ext/cmake/: FindOpenMesh.cmake  FindShapeOp.cmake  Findmatplotlib_cpp.cmake
ext/libigl/cmake/: libigl-cgal.yml  libigl.cmake
ext/libigl/include/igl/: boundary_loop.h  quad_planarity.cpp
ext/libigl/include/igl/opengl/: ViewerData.cpp  ViewerData.h
project_page/: index.html
src/: main.cpp
src/Mesh/: Mesh.cpp  Mesh.h  MeshCreator.cpp  MeshCreator.h  MeshObject.cpp  MeshObject.h
src/Render/: libigl_Render.cpp  libigl_Render.h  libigl_UI.cpp  libigl_UI.h
src/TileableStructure/: BaseSurface.cpp  BaseSurface.h  CuttingPlane.cpp  CuttingPlane.h  CuttingPlaneOptimizer.cpp  CuttingPlaneOptimizer.h  Initialization.cpp  Initialization.h  ShellBlock.cpp  ShellBlock.h  ShellStructure.cpp  ShellStructure.h  Surface.cpp  Surface.h  SurfaceOptimizer.cpp  SurfaceOptimizer.h  TilePattern.cpp  TilePattern.h
src/Utility/: HelpFunc.cpp  HelpFunc.h  HelpFunc_Internal.cpp  HelpFunc_Internal.h  HelpTypedef.h  dbg.h
